--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 </head>
     <body>
 
-
-
     <div class="header">
 
     <div class="container">
         <div class="navbaar">
             <div class="logo">
-                <a href="index.html"><img src="logo.png" width="125px"></a>
+                <a href="index.html"><img src="images/logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -45,21 +43,6 @@
     </div>
     </div>
         
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!----------- featured categories --------------->
 
         <div class="categories">
@@ -80,23 +63,7 @@
                     </div>
             </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <!----------- featured products--------------->
-
-
             
                 <div class="small-container">
                     <h2 class="title">Featured Products</h2>
@@ -114,9 +81,6 @@
                             </div>
                             <p>&#8377;2500</p>
                         </div>
-
-
-
                         <!--------Product 2--------->
 
                         <div class="col-4">
@@ -132,8 +96,6 @@
                             <p>&#8377;1500</p>
                         </div>
 
-
-
                         <!--------Product 3--------->
 
                         <div class="col-4">
@@ -148,8 +110,6 @@
                             </div>
                             <p>&#8377;3000</p>
                         </div>
-
-
 
                         <!--------Product 4--------->
 
