--- a/cart.html
+++ b/cart.html
@@ -1,4 +1,3 @@
-<!DOCTYPR html>
 <html>
     <head>
     <meta charset="UTF-8">
@@ -17,7 +16,7 @@
     <div class="container">
         <div class="navbaar">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +28,8 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="cart.html"><img src="cart.png" width="30px" height="30px"></a>
+            <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
 
@@ -51,7 +50,7 @@
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="images/buy-1.jpg">
+                    <img src="buy-1.jpg">
                     <div>
                         <p>Shades Air</p>
                         <small>&#8377; 3000</small>
@@ -69,7 +68,7 @@
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="images/buy-2.jpg">
+                    <img src="buy-2.jpg">
                     <div>
                         <p>Cat Eye</p>
                         <small>&#8377; 2800</small>
@@ -89,7 +88,7 @@
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="images/buy-3.jpg">
+                    <img src="buy-3.jpg">
                     <div>
                         <p>Plain Black</p>
                         <small>&#8377; 2500</small>
@@ -144,13 +143,13 @@
                 <h3>Download our App</h3>
                 <p>Download App for Android and IOS mobile Phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
 
             <div class="footer-col-2">
-                <img src="images/logo-white.png">
+                <img src="logo-white.png">
                 <p>Our purpose is to sustainably make the pleasure and benefits of our brand to many.</p>
             </div>
 
