--- a/Home Delivery.html
+++ b/Home Delivery.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="navbaar">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="cart.html"><img src="cart.png" width="30px" height="30px"></a>
+            <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>      
 
@@ -146,13 +146,13 @@
                 <h3>Download our App</h3>
                 <p>Download App for Android and IOS mobile Phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
 
             <div class="footer-col-2">
-                <img src="images/logo-white.png">
+                <img src="logo-white.png">
                 <p>Our purpose is to sustainably make the pleasure and benefits of our brand to many.</p>
             </div>
 
