--- a/product-details.html
+++ b/product-details.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="navbaar">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="cart.html"><img src="cart.png" width="30px" height="30px"></a>
+            <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
 
@@ -44,20 +44,20 @@
         <div class="small-comtainer single-product">
             <div class="row">
                 <div class="col-2">
-                    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="images/gallery-1.jpg" width="70%" id="ProductImg">
+                    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="gallery-1.jpg" width="70%" id="ProductImg">
 
                     <div class="small-img-row">
                         <div class="small-img-col">
-                            <img src="images/gallery-1.jpg" width="70%" class="small-img">
+                            <img src="gallery-1.jpg" width="70%" class="small-img">
                         </div>
                         <div class="small-img-col">
-                            <img src="images/gallery-2.jpg" width="480" class="small-img">
+                            <img src="gallery-2.jpg" width="480" class="small-img">
                         </div>
                         <div class="small-img-col">
-                            <img src="images/gallery-3.jpg" width="100%" class="small-img">
+                            <img src="gallery-3.jpg" width="100%" class="small-img">
                         </div>
                         <div class="small-img-col">
-                            <img src="images/gallery-4.jpg" width="100%" class="small-img">
+                            <img src="gallery-4.jpg" width="100%" class="small-img">
                         </div>
                     </div>
 
@@ -106,7 +106,7 @@
 
                         <!------- Product 1--------------->
                         <div class="col-4">
-                            <img src="images/product-1.jpg">
+                            <img src="product-1.jpg">
                             <h4>Navy Blue</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -121,7 +121,7 @@
                         <!--------Product 2--------->
 
                         <div class="col-4">
-                            <img src="images/product-2.jpg">
+                            <img src="product-2.jpg">
                             <h4>Black Eyewear</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -138,7 +138,7 @@
                         <!--------Product 3--------->
 
                         <div class="col-4">
-                            <img src="images/product-3.jpg">
+                            <img src="product-3.jpg">
                             <h4>Vincent Chase</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -155,7 +155,7 @@
                         <!--------Product 4--------->
 
                         <div class="col-4">
-                            <img src="images/product-4.jpg">
+                            <img src="product-4.jpg">
                             <h4>John Jacobs</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -185,13 +185,13 @@
                 <h3>Download our App</h3>
                 <p>Download App for Android and IOS mobile Phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
 
             <div class="footer-col-2">
-                <img src="images/logo-white.png">
+                <img src="logo-white.png">
                 <p>Our purpose is to sustainably make the pleasure and benefits of our brand to many.</p>
             </div>
 
