--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="navbaar">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="cart.html"><img src="cart.png" width="30px" height="30px"></a>
+            <img src="menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
     
@@ -52,7 +52,7 @@
 
                         <!------- Product 1--------------->
                         <div class="col-4">
-                            <a href="product-details.html"><img src="images/product-1.jpg"></a>
+                            <a href="product-details.html"><img src="product-1.jpg"></a>
                             <h4>Navy Blue</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -67,7 +67,7 @@
                         <!--------Product 2--------->
 
                         <div class="col-4">
-                            <img src="images/product-2.jpg">
+                            <img src="product-2.jpg">
                             <h4>Black Eyewear</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -84,7 +84,7 @@
                         <!--------Product 3--------->
 
                         <div class="col-4">
-                            <img src="images/product-3.jpg">
+                            <img src="product-3.jpg">
                             <h4>Vincent Chase</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -101,7 +101,7 @@
                         <!--------Product 4--------->
 
                         <div class="col-4">
-                            <img src="images/product-4.jpg">
+                            <img src="product-4.jpg">
                             <h4>John Jacobs</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -125,7 +125,7 @@
 
                         <!------- Product 5--------------->
                         <div class="col-4">
-                            <img src="images/product-5.jpg">
+                            <img src="product-5.jpg">
                             <h4>Shades Air</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -140,7 +140,7 @@
                         <!--------Product 6--------->
 
                         <div class="col-4">
-                            <img src="images/product-6.jpg">
+                            <img src="product-6.jpg">
                             <h4>Royal Chase</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -157,7 +157,7 @@
                         <!--------Product 7--------->
 
                         <div class="col-4">
-                            <img src="images/product-7.jpg">
+                            <img src="product-7.jpg">
                             <h4>Cat Eye</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -174,7 +174,7 @@
                         <!--------Product 8--------->
 
                         <div class="col-4">
-                            <img src="images/product-8.jpg">
+                            <img src="product-8.jpg">
                             <h4>Plain Black</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -189,7 +189,7 @@
                         <!--------Product 9--------->
 
                         <div class="col-4">
-                            <img src="images/product-9.jpg">
+                            <img src="product-9.jpg">
                             <h4>Flair Eyewear</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -205,7 +205,7 @@
                         <!--------Product 10--------->
 
                         <div class="col-4">
-                            <img src="images/product-10.jpg">
+                            <img src="product-10.jpg">
                             <h4>Charcoal Eyewear</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -220,7 +220,7 @@
                         <!--------Product 11--------->
 
                         <div class="col-4">
-                            <img src="images/product-11.jpg">
+                            <img src="product-11.jpg">
                             <h4>Diamond Eyeware</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -236,7 +236,7 @@
                         <!--------Product 12--------->
 
                         <div class="col-4">
-                            <img src="images/product-12.jpg">
+                            <img src="product-12.jpg">
                             <h4>Banner Eyewear</h4>
                             <div class="rating">
                                 <i class="fa-solid fa-star"></i>
@@ -262,13 +262,13 @@
                 <h3>Download our App</h3>
                 <p>Download App for Android and IOS mobile Phone.</p>
                 <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
 
             <div class="footer-col-2">
-                <img src="images/logo-white.png">
+                <img src="logo-white.png">
                 <p>Our purpose is to sustainably make the pleasure and benefits of our brand to many.</p>
             </div>
 
